crates/aven-check/tests/fixtures/check/valid/bound-comptime-builtins.av
User = { name: Text }
K = keysOf(User)
P = pick(User, @{"name"})
