crates/aven-check/tests/fixtures/check/invalid/open-variant-into-closed-annotation.av
openVariantValue : @{@Ok(Int), ..} = value
result : @{@Ok(Int), @Err(Text)} = openVariantValue
